--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,8 @@
 /* It is recommended to place all your extra/additional CSS rules here */
+
+.max-width-image{
+    max-width: 100%;
+    width: 100%;
+    height: auto !important;
+}
+
